...
  };
  JoinGrup: undefined;
  JoinConfirm: { code: string };
};

export type MainTabParamList = {
  Beranda: undefined;
  Grup: undefined;
  Notifikasi: undefined;
  Profil: undefined;
};

export type AppStackParamList = {
  Main: NavigatorScreenParams<MainTabParamList>;
...
